--- a/DRAG/Form1.resx
+++ b/DRAG/Form1.resx
@@ -2262,4 +2262,7 @@
         MY5xjA3G2WQc4xjH2GCcTcYxjnGMBb58+f8Bky99hkmPuAgAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
