--- a/DRAG/Properties/Resources.resx
+++ b/DRAG/Properties/Resources.resx
@@ -166,4 +166,7 @@
   <data name="ram" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ram.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="komp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\komp.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
